--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-loading": "^2.0.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "styled-components": "^5.3.0",
     "sweetalert2": "^10.16.7",
     "sweetalert2-react-content": "^3.3.2",
     "web-vitals": "^1.0.1"
