--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "styled-components": "^5.3.0",
     "sweetalert2": "^10.16.7",
     "sweetalert2-react-content": "^3.3.2",
+    "swr": "^0.5.6",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
