--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "sweetalert2": "^10.16.7",
     "sweetalert2-react-content": "^3.3.2",
     "swr": "^0.5.6",
+    "use-sound": "^3.0.1",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
