--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
     "material-table": "^1.69.3",
+    "moment-timezone": "^0.5.33",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-live-clock": "^5.1.0",
     "react-loading": "^2.0.3",
+    "react-moment": "^1.1.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.0",
