--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-live-clock": "^5.2.0",
     "react-loading": "^2.0.3",
     "react-moment": "^1.1.1",
+    "react-responsive-combo-box": "^1.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.0",
